# parity_bridge

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  ci.Dockerfile
deployments/local-scripts/: run-millau-node.sh  run-rialto-node.sh
deployments/monitoring/: GrafanaMatrix.Dockerfile
fuzz/storage-proof/: Cargo.toml
fuzz/storage-proof/src/: main.rs
modules/dispatch/: Cargo.toml
modules/dispatch/src/: lib.rs
modules/grandpa/: Cargo.toml
modules/grandpa/src/: lib.rs  mock.rs  weights.rs
modules/messages/: Cargo.toml
modules/messages/src/: instant_payments.rs  lib.rs  mock.rs  weights.rs  weights_ext.rs
modules/shift-session-manager/: Cargo.toml
modules/support/: Cargo.toml
modules/support/src/: dispatch.rs  lib.rs  weights.rs
modules/support/src/traits/: messages.rs
modules/support/src/weights/: block_weights.rs  extrinsic_weights.rs  paritydb_weights.rs  rocksdb_weights.rs
modules/token-swap/: Cargo.toml
modules/token-swap/src/: lib.rs  weights.rs
modules/weights/: Cargo.toml
modules/weights/src/: weight_v2.rs
primitives_bridge/chain-millau/: Cargo.toml
primitives_bridge/chain-millau/src/: lib.rs
primitives_bridge/chain-rialto/: Cargo.toml
primitives_bridge/chain-rialto/src/: lib.rs
primitives_bridge/header-chain/: Cargo.toml
primitives_bridge/message-dispatch/: Cargo.toml
primitives_bridge/message-dispatch/src/: lib.rs
primitives_bridge/messages/: Cargo.toml
primitives_bridge/messages/src/: lib.rs  source_chain.rs  target_chain.rs
primitives_bridge/polkadot-core/: Cargo.toml
primitives_bridge/polkadot-core/src/: lib.rs
primitives_bridge/runtime/: Cargo.toml
primitives_bridge/runtime/src/: chain.rs  lib.rs  storage_proof.rs
primitives_bridge/test-utils/: Cargo.toml
primitives_bridge/test-utils/src/: lib.rs
primitives_bridge/token-swap/: Cargo.toml
relays/bin-substrate/: Cargo.toml
relays/bin-substrate/src/chains/: millau.rs  millau_headers_to_rialto.rs  millau_messages_to_rialto.rs  mod.rs  rialto.rs  rialto_headers_to_millau.rs  rialto_messages_to_millau.rs
relays/bin-substrate/src/cli/: bridge.rs  encode_message.rs  init_bridge.rs  mod.rs  reinit_bridge.rs  relay_headers.rs  relay_headers_and_messages.rs  resubmit_transactions.rs  swap_tokens.rs
relays/client-millau/: Cargo.toml
relays/client-millau/src/: lib.rs
relays/client-rialto/: Cargo.toml
relays/client-rialto/src/: lib.rs
relays/client-substrate/: Cargo.toml
relays/client-substrate/src/: chain.rs
relays/client-substrate/src/metrics/: storage_proof_overhead.rs
relays/finality/: Cargo.toml
relays/lib-substrate-relay/: Cargo.toml
relays/lib-substrate-relay/src/: messages_lane.rs  messages_source.rs  messages_target.rs
relays/messages/: Cargo.toml
relays/messages/src/: message_race_delivery.rs
relays/messages/src/relay_strategy/: enforcement_strategy.rs
relays/utils/: Cargo.toml
scripts/: send-message-from-rialto-millau.sh
