[package]
name = "substrate-relay"
version = "1.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
anyhow = "1.0"
async-std = "1.9.0"
async-trait = "0.1.42"
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = "0.3.12"
hex = "0.4"
log = "0.4.14"
num-format = "0.4"
num-traits = "0.2"
paste = "1.0"
rand = "0.8"
structopt = "0.3"
strum = { version = "0.24.1", features = ["derive"] }

# Bridge dependencies

bp-header-chain = { path = "../../primitives_bridge/header-chain" }
bp-messages = { path = "../../primitives_bridge/messages" }
bp-message-dispatch = { path = "../../primitives_bridge/message-dispatch" }
bp-millau = { path = "../../primitives_bridge/chain-millau" }
#bp-polkadot = { path = "../../primitives_bridge/chain-polkadot" }
bp-rialto = { path = "../../primitives_bridge/chain-rialto" }
bp-runtime = { path = "../../primitives_bridge/runtime" }
bp-token-swap = { path = "../../primitives_bridge/token-swap" }
#bp-westend = { path = "../../primitives_bridge/chain-westend" }

bridge-runtime-common = { path = "../../bin/runtime-common" }
finality-relay = { path = "../finality" }
messages-relay = { path = "../messages" }
kitchensink-runtime = { path = "../../bin/millau/node/runtime" }
pallet-bridge-dispatch = { path = "../../modules/dispatch" }
pallet-bridge-grandpa = { path = "../../modules/grandpa" }
sp-weights2= {path ="../../modules/weights", default-features = false}
pallet-bridge-messages = { path = "../../modules/messages" }
pallet-bridge-token-swap = { path = "../../modules/token-swap" }
#frame-support = { path = "../../modules/support" }
relay-millau-client = { path = "../client-millau" }
# relay-polkadot-client = { path = "../client-polkadot" }
relay-rialto-client = { path = "../client-rialto" }
relay-substrate-client = { path = "../client-substrate" }
relay-utils = { path = "../utils" }
#relay-westend-client = { path = "../client-westend" }
runtime = { path = "../../bin/substrate2/runtime" }
substrate-relay-helper = { path = "../lib-substrate-relay" }

# Substrate Dependencies

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false}
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36",default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36",default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36",default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36",default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36",default-features = false }
sp-std ={ git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36",default-features = false }

# # Polkadot Dependencies

# polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "polkadot-v0.9.36" }
# polkadot-primitives_bridge = { git = "https://github.com/paritytech/polkadot", branch = "polkadot-v0.9.36" }
# polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "polkadot-v0.9.36" }
# polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "polkadot-v0.9.36" }

[dev-dependencies]
bp-test-utils = { path = "../../primitives_bridge/test-utils" }
hex-literal = "0.4.1"
pallet-bridge-grandpa = { path = "../../modules/grandpa" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
tempfile = "3.2"
finality-grandpa = { version = "0.16.2" }
