[package]
name = "substrate-relay-helper"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
anyhow = "1.0"
thiserror = "1.0.26"
async-std = "1.9.0"
async-trait = "0.1.42"
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = "0.3.12"
num-traits = "0.2"
log = "0.4.14"

# Bridge dependencies

bp-header-chain = { path = "../../primitives_bridge/header-chain" }
bridge-runtime-common = { path = "../../bin/runtime-common" }

finality-grandpa = { version = "0.16.2" }
finality-relay = { path = "../finality" }
relay-utils = { path = "../utils" }
messages-relay = { path = "../messages" }
relay-substrate-client = { path = "../client-substrate" }

pallet-bridge-grandpa = { path = "../../modules/grandpa" }
pallet-bridge-messages = { path = "../../modules/messages" }

bp-runtime = { path = "../../primitives_bridge/runtime" }
bp-messages = { path = "../../primitives_bridge/messages" }

# Substrate Dependencies

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[dev-dependencies]
bp-millau = { path = "../../primitives_bridge/chain-millau" }
bp-rialto = { path = "../../primitives_bridge/chain-rialto" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
runtime = { path = "../../bin/substrate2/runtime" }
